testing out a custom elasticOut transition using css animation. The animation works with javascript disabled in the browser (unlike the svelte js version). The animation works for the first onMount only of the home page, in this case, i.e. navigating away and back ... but will reset with a full page refresh. This works with using a context module in the component definition with 'let timesMounted = 0', and in an onmount of the copmonent increment the timesMounted. Note: i had to use a sleep function to ensure this increment happens after a fixed amount of time.. so as to not prematurely cut off the css animation

--- a/src/styles.css
+++ b/src/styles.css
@@ -102,3 +102,34 @@ body:has(.disableScrollOnThisPage) {
 		background-position: right;
 	}
 }
+
+/* experimental: trying to replicate svelte's elastic transition without needing JS */
+/* cubic-bezier(0.64, 0.57, 0.67, 1.53); */
+.elasticOut:not(.disable_animation) {
+	animation: elasticOut 0.8s ease;
+}
+
+@keyframes elasticOut {
+	0% {
+	}
+
+	40% {
+		transform: translateY(-50px);
+	}
+
+	60% {
+		transform: translateY(20px);
+	}
+
+	80% {
+		transform: translateY(-40px);
+	}
+
+	/* 90% {
+		transform: translateY(10px);
+	} */
+
+	100% {
+		transform: translateY(0px);
+	}
+}
